# chess

./: .gitignore  CMakeLists.txt  README.md
Design/: chess-app-design.xd  chess-pieces.xd
Game/Desktop game/src/: test.java
Game/Desktop game/src/game/: Chess.java  GameStatus.java
Game/Desktop game/src/gui/: BoardWindow.java
cpp/: chess-app  main.cpp
cpp/game/board/: board.cpp  board.hpp  rle.cpp  square.cpp  square.hpp
cpp/game/board/move/: move.cpp  move.hpp
cpp/game/board/piece/: bishop.cpp  bishop.hpp  piece.cpp  piece.hpp
cpp/include/board/: board.hpp  game.hpp  move.hpp  rle.hpp  square.hpp
cpp/include/board/move/: move.hpp
cpp/include/board/piece/: bishop.hpp  piece.hpp
cpp/include/game/: bitboard.hpp  board.hpp  eval.hpp  game.hpp  position.hpp
cpp/include/game/move/: move.hpp
cpp/include/ui/: chessWindow.hpp
cpp/src/: main.cpp
cpp/src/board/: board.cpp  move.cpp  rle.cpp  square.cpp
cpp/src/board/move/: move.cpp
cpp/src/board/piece/: bishop.cpp  piece.cpp
cpp/src/game/: bitboard.cpp  board.cpp  game.cpp  hashpos.cpp  position.cpp  rle.cpp
cpp/src/game/move/: move.cpp  moveStack.cpp
cpp/src/ui/: chessWindow.cpp
cpp/test/: bitboard.cpp  bitboard.hpp  elo  elo.cpp  movecalc.hpp  test.cpp
design/gimp/: chess-board.xcf
inc/game/: board.hpp  hashpos.hpp
java/: chessBoardArray.txt
java/Design/: overview-classes.xd
src/: main.cpp  main_console.cpp
src/game/: board.cpp  board.hpp  defs.cpp  defs.hpp  move.cpp  move.hpp  movegen.cpp  movegen.hpp  utils.cpp  utils.hpp
src/utils/: rle.hpp
test/: tests.cpp
(+114 files in other folders)
